--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,21 @@
-name: CI
+name: Build & Test
 
-on:
-  push:
-  pull_request:
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Checkout source
       - uses: actions/checkout@v4
 
+      # 2. Install JDK 17
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '17'
+          java-version: 17
 
-      - name: Make Maven wrapper executable
-        run: chmod +x mvnw
-
-      - name: Build & test
-        run: ./mvnw -B test
+      # 3. Build + test
+      - name: Maven test
+        run: mvn -B test
