Feat: added refresh token logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-jwt.secret=${JWT_SECRET}
+jwt.access.secret=${JWT_ACCESS_SECRET}
+jwt.refresh.secret=${JWT_REFRESH_SECRET}
 
 
 spring.jpa.hibernate.ddl-auto=none
@@ -26,4 +27,4 @@ spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH}
 spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE}
-roomies.mail.reset-valid-min=60
+roomies.mail.reset-valid-min=${ROOMIES_MAIL_RESET_VALID_MIN}
