--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 jwt.access.secret=${JWT_ACCESS_SECRET}
 jwt.refresh.secret=${JWT_REFRESH_SECRET}
 
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.time-zone=UTC
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 
 logging.level.org.springframework.security=DEBUG
