--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,14 @@ spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH}
 spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE}
 roomies.mail.reset-valid-min=${ROOMIES_MAIL_RESET_VALID_MIN}
+
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mail.properties.mail.debug=true
+logging.level.org.springframework.mail.javamail=DEBUG
+
+
+
+
